feat: add flex box

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="maintitle">Hello, Rs-school mentors!</h1>
-    <p class="paragraph">This is my first coding when i using GIT, <br>
-    <b>thank you very much for your service!</b> </p>
+    <div class="wrapper">
+        <div class="main-content"></div>
+        <aside class="sidebar"></aside>
+    </div>
 
 </body>
 </html>
