feat: add profile pic and contacts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lipcheyy cv</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="main-content"></div>
-        <aside class="sidebar"></aside>
+        <aside class="sidebar">
+            <img class="mypic" src="profilepic.jfif" alt="Profile Picture">
+            <h1>Vladyslav Lypchey</h1> 
+            <hr>
+            <h2>Contacts</h2>
+            <p>Instagram: @into_the_lungsofhell</p>
+            <p>Facebook: Vladyslav Lypchey</p>
+            <p>E-mail: vladlipchey@gmail.com</p>
+            <p>GitHub: @lipcheyy</p>
+            <hr>
+            
+        </aside>
     </div>
 
 </body>
