feat: add skills section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
             <p>E-mail: vladlipchey@gmail.com</p>
             <p>GitHub: @lipcheyy</p>
             <hr>
-            
+            <h2>My skills</h2>
+            <ul class="my_skills">
+                <li><span class="none">C++ basics</span> </li>
+                <li><span class="none">Python basics</span></li>
+                <li><span class="none">HTML5/CSS3</span></li>
+                <li><span class="none">JavaScript</span></li>
+                <li><span class="none">Java/Android</span></li>
+                <li><span class="none">Unity</span></li>
+            </ul>
+            <hr>
+
         </aside>
     </div>
 
