feat: add education and english info

--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
                         }
                  </code></pre>
                  <hr>
+            <!--EDUCATION-->
+            <h2 class="h2-title">Education</h2>
+            <p class="education">I took courses in various programming languages, including C ++,<br>
+                Python, JavaScript and HTML/CSS basics. <br>
+                At the moment I am studying int the Uzhhorod National University.</p>
+                <hr>
+               <!--ENGLISH--> 
+               <h2 class="h2-title">English</h2>
+               <p class="english">
+                I studied basic English at school and am currently studying professional English at <br>
+                 university. I can communicate freely on some topics and understand well the speech of <br>
+                a person who speaks English. At the university my level of English was rated as B2.
+                
+               </p>
         </main>
         <!--SIDEBAR-->
         <aside class="sidebar">
