feat: add styles and fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="main.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lipcheyy cv</title>
 </head>
@@ -21,19 +32,18 @@
                 <hr>
                 <!--Example code-->
             <h2 class="h2-title">Example code</h2>
-            <i>Below I have attached an example of the code of the tasks that I solved <br> during my studies.</i> <br>
-            <b><a href="https://www.eolymp.com/ru/problems/1532" target="_blank"> Handshake</b></a> <br>
+            <span class="bold"><a href="https://www.eolymp.com/ru/problems/1532" target="_blank"> Handshake</a></span> <br>
             <br>
-            <p>N businessmen gathered at the round table. Before the meeting, they should <br> shake hands <br>
+            <p> <b>N</b> businessmen gathered at the round table. Before the meeting, they should <br> shake hands <br>
                  at the same time. No businessmen's hands should cross. <br>
                  Calculate the number of ways they can shake hands.
-                <br> <br>
-                Input <br>
+                <br> 
+               <span class="bold">Input</span> <br>
 
                 Each line contains one even natural number n (2 ≤ n ≤ 50). <br>
-                Output
+               <span class="bold"> Output</span> <br> 
 
-                For each value of n, print on a separate line the number <br>
+                    For each value of <span class="bold">n</span>, print on a separate line the number <br>
                  of ways n businessmen can shake hands. <br></p>
                  <h3>Solution</h3>
                  <pre >
@@ -74,12 +84,15 @@
                 I studied basic English at school and am currently studying professional English at <br>
                  university. I can communicate freely on some topics and understand well the speech of <br>
                 a person who speaks English. At the university my level of English was rated as B2.
-                
+                <hr>
                </p>
+               <footer><a href="https://github.com/lipcheyy" target="_blank"><img class="gh" src="img/25231.png" alt="GitHub account" ></a>
+            <h2 class="workyear">2021</h2></footer>
+               
         </main>
         <!--SIDEBAR-->
         <aside class="sidebar">
-            <img class="mypic" src="profilepic.jfif" alt="Profile Picture">
+            <img class="mypic" src="img/profilepic.jfif" alt="Profile Picture">
             <h1>Vladyslav Lypchey</h1> 
             <p>Student</p>
             <hr>
@@ -100,7 +113,7 @@
                 <li><span class="none">Unity</span></li>
             </ul>
             <hr>
-            <a href="https://rs.school/js/" target="_blank"><img class="rs-logo" src="rs_school_js.svg" alt="RS-SCHOOL LOGO"></a>
+            <a href="https://rs.school/js/" target="_blank"><img class="rs-logo" src="img/rs_school_js.svg" alt="RS-SCHOOL LOGO"></a>
 
         </aside>
     </div>
