feat: add style

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <main class="main-content">
             <h2 class="h2-title">About Myself</h2>
             
-            <p class="about-myself">My name is Vladislav, im 18 years old. I am a student of Uzhhorod National University. <br>
-                At the university I got acquainted with such programming languages as C++, C#,Java<br>
-                and Python. I consider it my goal to become a web developer, since at the moment <br>
-                this is one of the most demanded jobs in the world. In addition, I myself am very <br>
+            <p class="about-myself">My name is Vladislav, im 18 years old. I am a student of <br> Uzhhorod National University. 
+                At the university I got acquainted <br>with such programming languages as C++, C#,Java<br>
+                and Python. I consider it my goal to become a web developer, <br>since at the moment 
+                this is one of the most demanded jobs in the world.<br> In addition, I myself am very 
                 interested in web development.</p>
                 <hr>
                 <!--Example code-->
             <h2 class="h2-title">Example code</h2>
-            <span class="bold"><a href="https://www.eolymp.com/ru/problems/1532" target="_blank"> Handshake</a></span> <br>
+            <span class="bold"><a href="https://www.eolymp.com/ru/problems/1532" target="_blank" class="nodec"> Handshake</a></span> <br>
             <br>
             <p> <b>N</b> businessmen gathered at the round table. Before the meeting, they should <br> shake hands <br>
                  at the same time. No businessmen's hands should cross. <br>
@@ -81,9 +81,9 @@
                <!--ENGLISH--> 
                <h2 class="h2-title">English</h2>
                <p class="english">
-                I studied basic English at school and am currently studying professional English at <br>
-                 university. I can communicate freely on some topics and understand well the speech of <br>
-                a person who speaks English. At the university my level of English was rated as B2.
+                I studied basic English at school and am currently studying  <br> professional English at
+                 university. I can communicate freely on <br> some topics and understand well the speech of 
+                a person who <br> English. At the university my level of English was rated as B2.
                 <hr>
                </p>
                <footer><a href="https://github.com/lipcheyy" target="_blank"><img class="gh" src="img/25231.png" alt="GitHub account" ></a>
@@ -97,10 +97,10 @@
             <p>Student</p>
             <hr>
             <h2 class="h2-title">Contacts</h2>
-            <p>Instagram: @into_the_lungsofhell</p>
+            <p >Instagram: <a  class="nodec" href="https://www.instagram.com/into_the_lungsofhell/" target="_blank">@into_the_lungsofhell</a></p>
             <p>Facebook: Vladyslav Lypchey</p>
             <p>E-mail: vladlipchey@gmail.com</p>
-            <p>GitHub: @lipcheyy</p>
+            <p >GitHub: <a class="nodec" href="https://github.com/lipcheyy" target="_blank">@lipcheyy</a>  </p>
             <hr>
             <h2 class="h2-title">My skills</h2>
             <ul class="my_skills">
