feat: add end p tag

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                <p class="english">
                 I studied basic English at school and am currently studying  <br> professional English at
                  university. I can communicate freely on <br> some topics and understand well the speech of 
-                a person who <br> English. At the university my level of English was rated as B2.
-                <hr>
-               </p>
+                a person who <br> English. At the university my level of English was rated as B2.</p>
+                <hr> 
+               
                <footer><a href="https://github.com/lipcheyy" target="_blank"><img class="gh" src="img/25231.png" alt="GitHub account" ></a>
             <h2 class="workyear">2021</h2></footer>
                
